--- a/index.html
+++ b/index.html
@@ -4,46 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TeLlevoApp - Descarga la APK</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-        .container {
-            max-width: 1200px;
-            padding: 20px;
-        }
-        .call-to-action {
-            margin: 20px 0;
-        }
-        .photos {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-        }
-        .photos img {
-            max-width: 100%;
-            height: auto;
-            flex: 1 1 calc(20% - 10px);
-        }
-        @media (max-width: 768px) {
-            .photos img {
-                flex: 1 1 calc(50% - 10px);
-            }
-        }
-        @media (max-width: 480px) {
-            .photos img {
-                flex: 1 1 100%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
