--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Bienvenido a TeLlevoApp</h1>
-        <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
+        <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro para los alumnos de DuocUC! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
         <button onclick="window.location.href='drive.google.com/file/d/1byB9dC90rtC6R9qWP-TaYPOfkUpzYSpE/view?usp=drive_link'">Descargar APK</button>
         <div class="photos">
             <img src="ruta/a/tu/imagen1.jpg" alt="Foto 1">
