--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Bienvenido a TeLlevoApp</h1>
         <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
-        <button click="//drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing">Descargar APK</button>
+        <button onclick='//drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'>Descargar APK</button>
         <div class="photos">
             <img src="ruta/a/tu/imagen1.jpg" alt="Foto 1">
             <img src="ruta/a/tu/imagen2.jpg" alt="Foto 2">
