--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar APK</button>
         <div class="carousel"></div>
             <div class="carousel-inner">
-                <img src="imagen1.jpg" alt="Imagen 1">
-                <img src="imagen2.jpg" alt="Imagen 2">
-                <img src="imagen3.jpg" alt="Imagen 3">
-                <img src="imagen4.jpg" alt="Imagen 4">
-                <img src="imagen5.jpg" alt="Imagen 5">
-                <img src="imagen6.jpg" alt="Imagen 6">
-                <img src="imagen7.jpg" alt="Imagen 7">
+                <img src="/landingtellevoapp/assets/foto1.png" alt="Imagen 1">
+                <img src="/landingtellevoapp/assets/foto2.png" alt="Imagen 2">
+                <img src="/landingtellevoapp/assets/foto3.png" alt="Imagen 3">
+                <img src="/landingtellevoapp/assets/foto4.png" alt="Imagen 4">
+                <img src="/landingtellevoapp/assets/foto5.png" alt="Imagen 5">
+                <img src="/landingtellevoapp/assets/foto6.png" alt="Imagen 6">
+                <img src="/landingtellevoapp/assets/foto7.png" alt="Imagen 7">
             </div>
         </div>
 
