--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <h1>Bienvenido a TeLlevoApp</h1>
         <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
         <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar APK</button>
-        <div class="carousel"></div>
-            <div class="carousel-inner">
-                <img src="/landingtellevoapp/assets/foto1.png" alt="Imagen 1">
-                <img src="/landingtellevoapp/assets/foto2.png" alt="Imagen 2">
-                <img src="/landingtellevoapp/assets/foto3.png" alt="Imagen 3">
-                <img src="/landingtellevoapp/assets/foto4.png" alt="Imagen 4">
-                <img src="/landingtellevoapp/assets/foto5.png" alt="Imagen 5">
-                <img src="/landingtellevoapp/assets/foto6.png" alt="Imagen 6">
-                <img src="/landingtellevoapp/assets/foto7.png" alt="Imagen 7">
+        
+        <div class="carousel">
+                <img src="/assets/imagen1.jpeg" alt="1">
+                <img src="/assets/imagen2.jpeg" alt="2">
+                <img src="/assets/imagen3.jpeg" alt="3">
+                <img src="/assets/imagen4.jpeg" alt="4">
+                <img src="/assets/imagen5.jpeg" alt="5">
+                <img src="/assets/imagen6.jpeg" alt="6">
+                <img src="/assets/imagen7.jpeg" alt="7">
             </div>
         </div>
 
