--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar APK</button>
         
         <div class="carousel">
+            <div class="carousel-inner">
                 <img src="/assets/imagen1.jpeg" alt="1">
                 <img src="/assets/imagen2.jpeg" alt="2">
                 <img src="/assets/imagen3.jpeg" alt="3">
@@ -22,13 +23,14 @@
                 <img src="/assets/imagen7.jpeg" alt="7">
             </div>
         </div>
+        </div>
 
         <div class="carousel-buttons">
             <button id="prev">&#10094;</button>
             <button id="next">&#10095;</button>
         </div>
     </div>
-
+        const carouselInner = document.querySelector('.carousel .carousel-inner');
     <script>
         const carouselInner = document.querySelector('.carousel-inner');
         const prevButton = document.getElementById('prev');
