--- a/index.html
+++ b/index.html
@@ -11,53 +11,15 @@
         <h1>Bienvenido a TeLlevoApp</h1>
         <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
         <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar APK</button>
-        
-        <div class="carousel">
-            <div class="carousel-buttons">
-            <button id="prev">&#10094;</button>
-            <button id="next">&#10095;</button>
+            <div class="gallery">
+                <img src="/assets/imagen1.jpeg" alt="1">
+                <img src="/assets/imagen2.jpeg" alt="2">
+                <img src="/assets/imagen3.jpeg" alt="3">
+                <img src="/assets/imagen4.jpeg" alt="4">
+                <img src="/assets/imagen5.jpeg" alt="5">
+                <img src="/assets/imagen6.jpeg" alt="6">
+                <img src="/assets/imagen7.jpeg" alt="7">
             </div>
-            <div class="carousel-inner">
-            <img src="/assets/imagen1.jpeg" alt="1">
-            <img src="/assets/imagen2.jpeg" alt="2">
-            <img src="/assets/imagen3.jpeg" alt="3">
-            <img src="/assets/imagen4.jpeg" alt="4">
-            <img src="/assets/imagen5.jpeg" alt="5">
-            <img src="/assets/imagen6.jpeg" alt="6">
-            <img src="/assets/imagen7.jpeg" alt="7">
-            </div>
-        </div>
-        </div>
-
-        <div class="carousel-buttons">
-            <button id="prev">&#10094;</button>
-            <button id="next">&#10095;</button>
-        </div>
-    </div>
-        const carouselInner = document.querySelector('.carousel .carousel-inner');
-    <script>
-        const carouselInner = document.querySelector('.carousel-inner');
-        const prevButton = document.getElementById('prev');
-        const nextButton = document.getElementById('next');
-        let currentIndex = 0;
-
-        function updateCarousel() {
-            const width = carouselInner.clientWidth;
-            carouselInner.style.transform = `translateX(-${currentIndex * width}px)`;
-        }
-
-        prevButton.addEventListener('click', () => {
-            currentIndex = (currentIndex > 0) ? currentIndex - 1 : 6;
-            updateCarousel();
-        });
-
-        nextButton.addEventListener('click', () => {
-            currentIndex = (currentIndex < 6) ? currentIndex + 1 : 0;
-            updateCarousel();
-        });
-
-        window.addEventListener('resize', updateCarousel);
-    </script>
     </div>
 </body>
 </html>
