--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container">
         <h1>Bienvenido a TeLlevoApp</h1>
         <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
-        <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar APK</button>    
+        <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar APK</button>
+        <h3>Galería</h3>
         <div class="gallery">
                 <img src="/assets/imagen1.jpeg" alt="1">
                 <img src="/assets/imagen2.jpeg" alt="2">
