--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TeLlevoApp - Descarga la APK</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Bienvenido a TeLlevoApp</h1>
-        <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
-        <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar APK</button>
-        <h3>Galería</h3>
-        <div class="gallery">
+        <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz
+            clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
+        <button
+            onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar
+            APK</button>
+        <div>
+            <h3>Galería</h3>
+            <div class="gallery">
                 <img src="/assets/imagen1.jpeg" alt="1">
                 <img src="/assets/imagen2.jpeg" alt="2">
                 <img src="/assets/imagen3.jpeg" alt="3">
@@ -21,6 +27,8 @@
                 <img src="/assets/imagen6.jpeg" alt="6">
                 <img src="/assets/imagen7.jpeg" alt="7">
             </div>
+        </div>
     </div>
 </body>
+
 </html>
