--- a/index.html
+++ b/index.html
@@ -1,34 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TeLlevoApp - Descarga la APK</title>
+    <title>TeLlevoApp</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div class="container">
-        <h1>Bienvenido a TeLlevoApp</h1>
-        <p class="call-to-action">¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz
-            clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
-        <button
-            onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing'">Descargar
-            APK</button>
-        <div>
-            <h2>Galería</h2>
-            <div class="gallery">
-                <img src="/assets/imagen1.jpeg" alt="1">
-                <img src="/assets/imagen2.jpeg" alt="2">
-                <img src="/assets/imagen3.jpeg" alt="3">
-                <img src="/assets/imagen4.jpeg" alt="4">
-                <img src="/assets/imagen5.jpeg" alt="5">
-                <img src="/assets/imagen6.jpeg" alt="6">
-                <img src="/assets/imagen7.jpeg" alt="7">
-            </div>
-        </div>
-    </div>
+    <h1>Bienvenido a TeLlevoApp</h1>
+    <p>¡Descarga nuestra app y disfruta de un servicio de transporte seguro para la gente de DuocUC! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
+    <button>Descargar APK</button>
+    <div class="gallery">
+        <h2>Galería</h2>
+        <div class="gallery">
+            <img src="/assets/imagen1.jpeg" alt="1">
+            <img src="/assets/imagen2.jpeg" alt="2">
+            <img src="/assets/imagen3.jpeg" alt="3">
+            <img src="/assets/imagen4.jpeg" alt="4">
+            <img src="/assets/imagen5.jpeg" alt="5">
+            <img src="/assets/imagen6.jpeg" alt="6">
+            <img src="/assets/imagen7.jpeg" alt="7">
+        </div>    </div>
 </body>
-
 </html>
