--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             <img src="/assets/imagen5.jpeg" alt="5">
             <img src="/assets/imagen6.jpeg" alt="6">
             <img src="/assets/imagen7.jpeg" alt="7">
-        </div>    </div>
+        </div>
 </body>
 </html>
