--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Bienvenido a TeLlevoApp</h1>
-    <p>¡Descarga nuestra app y disfruta de un servicio de transporte seguro para la gente de DuocUC! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
-    <button>Descargar APK</button>
+    <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
+    <button >Descargar APK</button>
     <div class="gallery">
         <h2>Galería</h2>
         <div class="gallery">
@@ -21,5 +21,6 @@
             <img src="/assets/imagen6.jpeg" alt="6">
             <img src="/assets/imagen7.jpeg" alt="7">
         </div>
+    </div>
 </body>
 </html>
