--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Bienvenido a TeLlevoApp</h1>
     <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
-    <button >Descargar APK</button>
+    <button>Descargar APK</button>
+    
     <div class="gallery">
         <h2>Galería</h2>
-        <div class="gallery">
+        <div class="images">
             <img src="/assets/imagen1.jpeg" alt="1">
             <img src="/assets/imagen2.jpeg" alt="2">
             <img src="/assets/imagen3.jpeg" alt="3">
