--- a/index.html
+++ b/index.html
@@ -10,17 +10,28 @@
     <h1>Bienvenido a TeLlevoApp</h1>
     <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
     <button>Descargar APK</button>
-    
-    <div class="gallery">
-        <h2>Galería</h2>
-        <div class="images">
-            <img src="/assets/imagen1.jpeg" alt="1">
-            <img src="/assets/imagen2.jpeg" alt="2">
-            <img src="/assets/imagen3.jpeg" alt="3">
-            <img src="/assets/imagen4.jpeg" alt="4">
-            <img src="/assets/imagen5.jpeg" alt="5">
-            <img src="/assets/imagen6.jpeg" alt="6">
-            <img src="/assets/imagen7.jpeg" alt="7">
+    <div class="contenedor-galeria">
+        <div class="galeria">
+            <div class="contenedor-imagen">
+                <figure>
+                    <img src="/assets/imagen1.jpeg">
+                </figure>
+            </div>
+            <div class="contenedor-imagen">
+                <figure>
+                    <img src="/assets/imagen2.jpeg">
+                </figure>
+            </div>
+            <div class="contenedor-imagen">
+                <figure>
+                    <img src="/assets/imagen3.jpeg">
+                </figure>
+            </div>
+            <div class="contenedor-imagen">
+                <figure>
+                    <img src="/assets/imagen4.jpeg">
+                </figure>
+            </div>
         </div>
     </div>
 </body>
