--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Bienvenido a TeLlevoApp</h1>
     <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
-    <button onclick="https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing">Descargar APK</button>
+    <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing';">Descargar APK</button>
     
     <div class="gallery">
         <h2>Galería</h2>
@@ -25,3 +25,4 @@
     </div>
 </body>
 </html>
+
