--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TeLlevoApp</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Vincula el archivo CSS -->
 </head>
 <body>
+    <!-- Imagen redonda -->
+    <img src="/assets/avatar.png" alt="Icono de la app" class="profile-img">
+
     <h1>Bienvenido a TeLlevoApp</h1>
     <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
-    <button onclick="window.location.href='https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing';">Descargar APK</button>
-    
+
+    <!-- Botón de descarga -->
+    <a href="https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing" target="_blank">
+        <button>Descargar APK</button>
+    </a>
+
+    <!-- Galería de imágenes -->
     <div class="gallery">
         <h2>Galería</h2>
         <div class="images">
