--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TeLlevoApp</title>
+    <!-- Vincular Font Awesome para íconos -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css"> <!-- Vincula el archivo CSS -->
 </head>
 <body>
@@ -11,11 +13,20 @@
     <img src="/assets/avatar.png" alt="Icono de la app" class="profile-img">
 
     <h1>Bienvenido a TeLlevoApp</h1>
-    <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro! Haz clic en el botón de abajo para descargar la APK e instalarla en tu dispositivo Android.</p>
+    <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro!</p>
 
-    <!-- Botón de descarga -->
+    <!-- Botón de descarga para Android -->
     <a href="https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing" target="_blank">
-        <button>Descargar APK</button>
+        <button class="download-button">
+            <i class="fab fa-android"></i> Descargar para Android
+        </button>
+    </a>
+
+    <!-- Botón de descarga para Apple -->
+    <a href="https://www.apple.com/app-store/" target="_blank">
+        <button class="download-button">
+            <i class="fab fa-apple"></i> Descargar para iOS
+        </button>
     </a>
 
     <!-- Galería de imágenes -->
