--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,22 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css"> <!-- Vincula el archivo CSS -->
 </head>
+
 <body>
     <!-- Imagen redonda -->
     <img src="/assets/avatar.png" alt="Icono de la app" class="profile-img">
 
     <h1>Bienvenido a TeLlevoApp</h1>
+    <p>
+        En el contexto actual, donde muchas instituciones educativas han enfrentado desafíos significativos al retornar
+        a la presencialidad, los alumnos de Duoc UC han desarrollado <strong>TeLlevoApp</strong>. Esta aplicación móvil
+        surge como una solución innovadora para enfrentar las dificultades de transporte al término de la jornada
+        vespertina. TeLlevoApp permite a los estudiantes organizarse y coordinar viajes compartidos utilizando los
+        vehículos de aquellos compañeros que cuentan con movilización propia. Descarga la aplicación y sé parte de esta
+        comunidad que facilita el retorno seguro y económico a casa, disponible tanto para <strong>Android</strong> como
+        para <strong>iOS</strong>.
+    </p>
+
     <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro!</p>
 
     <!-- Botón de descarga para Android -->
@@ -43,4 +55,5 @@
         </div>
     </div>
 </body>
+
 </html>
