--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css"> <!-- Vincula el archivo CSS -->
 </head>
-
 <body>
     <!-- Imagen redonda -->
     <img src="/assets/avatar.png" alt="Icono de la app" class="profile-img">
@@ -54,6 +53,29 @@
             <img src="/assets/imagen7.jpeg" alt="7">
         </div>
     </div>
+<!-- Footer -->
+<footer style="background-color: #343a40; color: white; padding: 20px 0; text-align: center; margin-top: 40px;">
+    <div>
+        <p>&copy; 2024 TeLlevoApp. Todos los derechos reservados.</p>
+        <p>Desarrollado por estudiantes de <strong>Duoc UC</strong>.</p>
+    </div>
+    <div style="margin-top: 10px;">
+        <a href="https://github.com/usuario1" target="_blank" style="color: #ffffff; margin-right: 15px; text-decoration: none;">
+            <i class="fab fa-github"></i> Usuario1
+        </a>
+        <a href="https://github.com/usuario2" target="_blank" style="color: #ffffff; margin-right: 15px; text-decoration: none;">
+            <i class="fab fa-github"></i> Usuario2
+        </a>
+        <a href="https://github.com/usuario3" target="_blank" style="color: #ffffff; text-decoration: none;">
+            <i class="fab fa-github"></i> Usuario3
+        </a>
+    </div>
+    <div style="margin-top: 20px; font-size: 0.9em; color: #adb5bd;">
+        Contacto: <a href="mailto:contacto@tellevoapp.com" style="color: #adb5bd; text-decoration: none;">contacto@tellevoapp.com</a>
+    </div>
+</footer>
+
+
 </body>
 
 </html>
