--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
         </div>
     </div>
 <!-- Footer -->
-<footer style="background-color: #343a40; color: white; padding: 20px 0; text-align: center; margin-top: 40px;">
+<footer class="site-footer">
     <div>
         <p>&copy; 2024 TeLlevoApp. Todos los derechos reservados.</p>
         <p>Desarrollado por estudiantes de <strong>Duoc UC</strong>.</p>
     </div>
-    <div style="margin-top: 10px;">
-        <a href="https://github.com/usuario1" target="_blank" style="color: #ffffff; margin-right: 15px; text-decoration: none;">
+    <div class="developer-links">
+        <a href="https://github.com/usuario1" target="_blank">
             <i class="fab fa-github"></i> Usuario1
         </a>
-        <a href="https://github.com/usuario2" target="_blank" style="color: #ffffff; margin-right: 15px; text-decoration: none;">
+        <a href="https://github.com/usuario2" target="_blank">
             <i class="fab fa-github"></i> Usuario2
         </a>
-        <a href="https://github.com/usuario3" target="_blank" style="color: #ffffff; text-decoration: none;">
+        <a href="https://github.com/usuario3" target="_blank">
             <i class="fab fa-github"></i> Usuario3
         </a>
     </div>
-    <div style="margin-top: 20px; font-size: 0.9em; color: #adb5bd;">
-        Contacto: <a href="mailto:contacto@tellevoapp.com" style="color: #adb5bd; text-decoration: none;">contacto@tellevoapp.com</a>
+    <div class="contact-info">
+        Contacto: <a href="mailto:contacto@tellevoapp.com">contacto@tellevoapp.com</a>
     </div>
 </footer>
 
