--- a/index.html
+++ b/index.html
@@ -60,14 +60,11 @@
         <p>Desarrollado por estudiantes de <strong>Duoc UC</strong>.</p>
     </div>
     <div class="developer-links">
-        <a href="https://github.com/usuario1" target="_blank">
-            <i class="fab fa-github"></i> Usuario1
+        <a href="https://github.com/MjoseAlvarez" target="_blank">
+            <i class="fab fa-github"></i> María José Álvarez.
         </a>
-        <a href="https://github.com/usuario2" target="_blank">
-            <i class="fab fa-github"></i> Usuario2
-        </a>
-        <a href="https://github.com/usuario3" target="_blank">
-            <i class="fab fa-github"></i> Usuario3
+        <a href="https://github.com/renegaston" target="_blank">
+            <i class="fab fa-github"></i> René Figueroa Salas.
         </a>
     </div>
     <div class="contact-info">
