--- a/index.html
+++ b/index.html
@@ -55,24 +55,22 @@
     </div>
 <!-- Footer -->
 <footer class="site-footer">
-    <div>
+    <div class="footer-content">
         <p>&copy; 2024 TeLlevoApp. Todos los derechos reservados.</p>
         <p>Desarrollado por estudiantes de <strong>Duoc UC</strong>.</p>
     </div>
     <div class="developer-links">
         <a href="https://github.com/MjoseAlvarez" target="_blank">
-            <i class="fab fa-github"></i> María José Álvarez.
+            <i class="fab fa-github"></i> María José Álvarez
         </a>
         <a href="https://github.com/renegaston" target="_blank">
-            <i class="fab fa-github"></i> René Figueroa Salas.
+            <i class="fab fa-github"></i> René Figueroa Salas
         </a>
     </div>
     <div class="contact-info">
         Contacto: <a href="mailto:contacto@tellevoapp.com">contacto@tellevoapp.com</a>
     </div>
 </footer>
-
-
 </body>
 
 </html>
