--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         a la presencialidad, los alumnos de Duoc UC han desarrollado <strong>TeLlevoApp</strong>. Esta aplicación móvil
         surge como una solución innovadora para enfrentar las dificultades de transporte al término de la jornada
         vespertina. TeLlevoApp permite a los estudiantes organizarse y coordinar viajes compartidos utilizando los
-        vehículos de aquellos compañeros que cuentan con movilización propia. Descarga la aplicación y sé parte de esta
-        comunidad que facilita el retorno seguro y económico a casa, disponible tanto para <strong>Android</strong> como
-        para <strong>iOS</strong>.
+        vehículos de aquellos compañeros que cuentan con movilización propia. 
     </p>
 
-    <p>¡Descarga nuestra app y disfruta de un servicio de transporte rápido y seguro!</p>
+    <p>Descarga la aplicación y sé parte de esta
+        comunidad que facilita el retorno seguro y económico a casa, disponible tanto para <strong>Android</strong> como
+        para <strong>iOS</strong>.</p>
 
     <!-- Botón de descarga para Android -->
     <a href="https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing" target="_blank">
