--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <p>Descarga la aplicación y sé parte de esta
         comunidad que facilita el retorno seguro y económico a casa, disponible tanto para <strong>Android</strong> como
-        para <strong>iOS</strong>.</p>
+        para <strong>iOS</strong>(próximamente).</p>
 
     <!-- Botón de descarga para Android -->
     <a href="https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing" target="_blank">
@@ -34,7 +34,7 @@
     </a>
 
     <!-- Botón de descarga para Apple -->
-    <a href="https://www.apple.com/app-store/" target="_blank">
+    <a href="" target="_blank">
         <button class="download-button">
             <i class="fab fa-apple"></i> Descargar para iOS
         </button>
