--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </p>
 
     <p>Descarga la aplicación y sé parte de esta
-        comunidad que facilita el retorno seguro y económico a casa, disponible tanto para <strong>Android</strong> como
-        para <strong>iOS</strong> (próximamente).</p>
+        comunidad que facilita el retorno seguro y económico a casa, disponible para <strong>Android</strong>.
+        (<strong>iOS</strong> próximamente).</p>
 
     <!-- Botón de descarga para Android -->
     <a href="https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing" target="_blank">
@@ -33,12 +33,12 @@
         </button>
     </a>
 
-    <!-- Botón de descarga para Apple -->
+    <!-- Botón de descarga para Apple
     <a href="" target="_blank">
         <button class="download-button">
             <i class="fab fa-apple"></i> Descargar para iOS
         </button>
-    </a>
+    </a>-->
 
     <!-- Galería de imágenes -->
     <div class="gallery">
