--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <p>Descarga la aplicación y sé parte de esta
         comunidad que facilita el retorno seguro y económico a casa, disponible para <strong>Android</strong>.
-        (<strong>iOS</strong> próximamente).</p>
+        (Próximamente en <strong>iOS</strong>).</p>
 
     <!-- Botón de descarga para Android -->
     <a href="https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing" target="_blank">
