--- a/index/index.html
+++ b/index/index.html
@@ -7,7 +7,7 @@
     <title>TeLlevoApp</title>
     <!-- Vincular Font Awesome para íconos -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <!-- Vincula el archivo CSS -->
+    <link rel="stylesheet" href="/index/styles.css"> <!-- Vincula el archivo CSS -->
 </head>
 <body>
     <!-- Imagen redonda -->
