--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
             <img src="/assets/imagen4.jpeg" alt="4">
             <img src="/assets/imagen5.jpeg" alt="5">
             <img src="/assets/imagen6.jpeg" alt="6">
-            <img src="/assets/imagen7.jpeg" alt="7">
         </div>
     </div>
     <div>
-        <h2 href="/ficha/fichatec.html">
-            Ficha Técnica.
-        </h2>
+        <div class="contact-info">
+            <a href="/ficha/fichatec.html">Ficha Técnica.</a>
+        </div>
     </div>
 <!-- Footer -->
 <footer class="site-footer">
