--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha Técnica - TeLlevoApp</title>
-    <link rel="stylesheet" href="/ficha/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -13,9 +13,11 @@
             <h2>Información de la App</h2>
             <p><strong>Nombre:</strong> TeLlevoApp</p>
             <p><strong>Versión:</strong> 1.0.0</p>
-            <p><strong>Desarrollador:</strong> Tu Empresa</p>
-            <p><strong>Plataforma:</strong> Android, iOS</p>
-            <p><strong>Requiere:</strong> Android 5.0 o superior, iOS 10.0 o superior</p>
+            <p><strong>Desarrollador:</strong> Estudiantes de Duoc UC</p>
+            <p><strong>Plataforma:</strong> Android, iOS(Próximamente)</p>
+            <p><strong>Requiere:</strong> Android 5.0 o superior, iOS 10.0 o superior(Próximamente)</p>
+            <p><strong>Framework:</strong> Ionic Angular</p>
+            <p><strong>Servicios:</strong> Firebase (Atenticación), Firestore (Base de datos)</p>
         </div>
         <div class="features">
             <h2>Características</h2>
@@ -27,9 +29,13 @@
                 <li>Soporte 24/7</li>
             </ul>
         </div>
-        <div class="download">
-            <h2>Descargar</h2>
-            <button>Descargar APK</button>
+        <div class="plugins">
+            <h2>Plugins Utilizados</h2>
+            <ul>
+                <li>Firebase Authentication</li>
+                <li>Firestore Database</li>
+                <li>Firebase Cloud Messaging</li>
+            </ul>
         </div>
     </div>
 </body>
