--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <hr>
     <div>
         <div class="contact-info">
-            <a href="/ficha/fichatec.html">Ficha Técnica.</a>
+            <h2 href="/ficha/fichatec.html">Ficha Técnica.</h2>
         </div>
     </div>
     <hr>
