--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <hr>
     <div>
         <div class="contact-info">
-            <button href="/ficha/fichatec.html">Ficha Técnica.</button>
+            <button onclick="/ficha/fichatec.html">Ficha Técnica.</button>
         </div>
     </div>
     <hr>
