--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     </div>
     <hr>
     <div>
-        <div class="contact-info">
-            <button onclick="/ficha/fichatec.html">Ficha Técnica.</button>
-        </div>
+        <a href="/ficha/fichatec.html">
+            <button>Ficha Técnica</button>
+          </a>
     </div>
     <hr>
 <!-- Footer -->
