--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha Técnica - TeLlevoApp</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <div>
+        <button onclick="location.href='index.html'">Volver al Inicio</button>
+    </div>
+    <hr>
     <div class="container">
         <h1>Ficha Técnica - TeLlevoApp</h1>
         <div class="app-info">
@@ -39,4 +45,5 @@
         </div>
     </div>
 </body>
+
 </html>
