--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <button onclick="location.href='index.html'">Volver al Inicio</button>
+        <button onclick="location.href='/index.html'">Volver al Inicio</button>
     </div>
     <hr>
     <div class="container">
