--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -7,11 +7,10 @@
     <title>Ficha Técnica - TeLlevoApp</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
+<button onclick="location.href='index.html'" style="font-size: 24px; background: none; border: none; cursor: pointer;">
+    🏠
+</button>
 <body>
-    <div>
-        <button onclick="location.href='/index.html'">Volver al Inicio</button>
-    </div>
     <hr>
     <div class="container">
         <h1>Ficha Técnica - TeLlevoApp</h1>
