--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -7,9 +7,11 @@
     <title>Ficha Técnica - TeLlevoApp</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<button onclick="location.href='index.html'" style="font-size: 24px; background: none; border: none; cursor: pointer;">
-    🏠
-</button>
+<Header>
+    <a href="index.html" style="font-size: 24px; text-decoration: none; display: flex; align-items: center; gap: 5px;">
+        Volver
+    </a>
+</Header>
 <body>
     <hr>
     <div class="container">
