--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -7,22 +7,21 @@
     <title>Ficha Técnica - TeLlevoApp</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<Header>
-    <a href="index.html" style="font-size: 24px; text-decoration: none; display: flex; align-items: center; gap: 5px;">
-        Volver
-    </a>
-</Header>
+
 <body>
-    <hr>
+    <header>
+        <a href="index.html">🏠 Volver</a>
+    </header>
     <div class="container">
         <h1>Ficha Técnica - TeLlevoApp</h1>
+        <hr>
         <div class="app-info">
             <h2>Información de la App</h2>
             <p><strong>Nombre:</strong> TeLlevoApp</p>
             <p><strong>Versión:</strong> 1.0.0</p>
             <p><strong>Desarrollador:</strong> Estudiantes de Duoc UC</p>
-            <p><strong>Plataforma:</strong> Android, iOS(Próximamente)</p>
-            <p><strong>Requiere:</strong> Android 5.0 o superior, iOS 10.0 o superior(Próximamente)</p>
+            <p><strong>Plataforma:</strong> Android, iOS (Próximamente)</p>
+            <p><strong>Requiere:</strong> Android 5.0 o superior, iOS 10.0 o superior (Próximamente)</p>
             <p><strong>Framework:</strong> Ionic Angular</p>
             <p><strong>Servicios:</strong> Firebase (Atenticación), Firestore (Base de datos)</p>
         </div>
