--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="index.html">🏠 Volver</a>
+        <a href="/index.html">Volver</a>
     </header>
     <div class="container">
         <h1>Ficha Técnica - TeLlevoApp</h1>
