--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -12,6 +12,7 @@
     <header>
         <a href="/index.html">Volver</a>
     </header>
+    <hr>
     <div class="container">
         <h1>Ficha Técnica - TeLlevoApp</h1>
         <hr>
@@ -20,6 +21,7 @@
             <p><strong>Nombre:</strong> TeLlevoApp</p>
             <p><strong>Versión:</strong> 1.0.0</p>
             <p><strong>Desarrollador:</strong> Estudiantes de Duoc UC</p>
+            <p><strong>Integrantes:</strong> María José Álvarez y René Figueroa.</p>
             <p><strong>Plataforma:</strong> Android, iOS (Próximamente)</p>
             <p><strong>Requiere:</strong> Android 5.0 o superior, iOS 10.0 o superior (Próximamente)</p>
             <p><strong>Framework:</strong> Ionic Angular</p>
