--- a/ficha/fichatec.html
+++ b/ficha/fichatec.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha Técnica - TeLlevoApp</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/ficha/styles.css">
 </head>
 
 <body>
     <header>
         <a href="/index.html">Volver</a>
     </header>
-    <hr>
     <div class="container">
         <h1>Ficha Técnica - TeLlevoApp</h1>
         <hr>
