--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Contenedor para Web -->
     <div id="webContent" class="deviceContent">
         <p>Escanea el código QR para descargar la aplicación.</p>
-        <img src="/assets/qr-code.png" alt="Código QR" class="qr-code">
+        <img src="/assets/qr.png" alt="Código QR" class="qr-code">
     </div>
 
     <!-- Galería de imágenes -->
