--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 
@@ -25,7 +26,7 @@
 
     <!-- Contenedor para Android -->
     <div id="androidContent" class="deviceContent">
-        <a href="https://drive.google.com/file/d/1y4bwWrEEr2Afrl8HbqXeSYcAz9UNY-95/view?usp=sharing" target="_blank">
+        <a href="https://drive.google.com/file/d/1byB9dC90rtC6R9qWP-TaYPOfkUpzYSpE/view?usp=sharing" target="_blank">
             <button class="download-button">
                 <i class="fab fa-android"></i> Descargar para Android
             </button>
@@ -62,6 +63,9 @@
         </a>
     </div>
     <hr>
+    <!-- Boton de link para la página de duoc uc -->
+     
+
     <!-- Footer -->
     <footer class="site-footer">
         <div class="footer-content">
@@ -82,6 +86,7 @@
     </footer>
 
     <script src="script.js"></script>
+
 </body>
 
 </html>
